<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_config"
        android:title="@string/new_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_import_from_clipboard"
        android:title="@string/import_from_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_control"
        android:icon="@drawable/play"
        android:title="@string/control_enable"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_backup"
        android:title="@string/backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_restore"
        android:title="@string/restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_export"
        android:title="@string/export"
        app:showAsAction="never" />
</menu>
